azure-vote/k3s-america-south/gen_manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
spec:
  ports:
  - port: 6379
  selector:
    app: azure-vote-back
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
spec:
  ports:
  - port: 80
  selector:
    app: azure-vote-front
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-back
  template:
    metadata:
      labels:
        app: azure-vote-back
    spec:
      containers:
      - env:
        - name: ALLOW_EMPTY_PASSWORD
          value: "yes"
        image: gitopsflowacr.azurecr.io/azvote/azure-vote-back:b5a573f1e261df65a7c599130f5b504999a9e58e
        name: azure-vote-back
        ports:
        - containerPort: 6379
          name: redis
      nodeSelector:
        beta.kubernetes.io/os: linux
      serviceAccountName: kaizentm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-front
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      containers:
      - env:
        - name: REDIS
          value: azure-vote-back
        - name: TITLE
          value: Sample Voting Application
        image: gitopsflowacr.azurecr.io/azvote/azure-vote-front:725804506ea4ed2775b05845f044de7759f5f391
        name: azure-vote-front
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
      serviceAccountName: kaizentm
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: az-vote-front-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: azure-vote-front
            port:
              number: 80
        path: /azvote-dev(/|$)(.*)
        pathType: Prefix
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-kaizentm
